SERVER-48030 Fix deadlock with GetShardMap and old RSM